freesia/manifests/navidrome-filebrowser/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  labels:
    app.kubernetes.io/name: filebrowser
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: filebrowser
  template:
    metadata:
      labels:
        app.kubernetes.io/name: filebrowser
    spec:
      containers:
        - name: filebrowser
          image: filebrowser/filebrowser:s6
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 1000m
              memory: 2048Mi
            requests:
              cpu: 100m
              memory: 128Mi
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: music
              mountPath: /music

      volumes:
        - name: config
          configMap:
            name: filebrowser-config
        - name: music
          persistentVolumeClaim:
            claimName: navidrome-music
