freesia/manifests/navidrome-filebrowser/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebrowser
  labels:
    app.kubernetes.io/name: filebrowser
spec:
  ingressClassName: nginx
  rules:
    - host: "navidrome-files.harvestasya.org"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: filebrowser
                port:
                  number: 80
  tls:
    - hosts:
        - "navidrome-files.harvestasya.org"
